added numerical solution of eqm

--- a/report/eqns/phieqm.tex
+++ b/report/eqns/phieqm.tex
@@ -1,1 +1,1 @@
-&Lr^{-6}\nonumber\\&- 2 Lr^{6} \phi \psi^{2} + Lr^{4} z^{6} \operatorname{f}\left(z\right) \frac{\partial^{2}}{\partial^{2} z}  \phi + 8 Lr^{4} z^{5} \operatorname{f}\left(z\right) \frac{\partial}{\partial z} \phi + 48 z^{14} \operatorname{f}\left(z\right) \left(\frac{\partial}{\partial z} \phi\right)^{2} \frac{\partial^{2}}{\partial^{2} z}  \phi + 256 z^{13} \operatorname{f}\left(z\right) \left(\frac{\partial}{\partial z} \phi\right)^{3}
+&- 2 \frac{\phi \psi^{2} r^{2}}{\operatorname{f}\left(r\right)} + r^{2} \frac{\partial^{2}}{\partial^{2} r}  \phi + 2 r \frac{\partial}{\partial r} \phi
