--- a/report/eqns/psieqm.tex
+++ b/report/eqns/psieqm.tex
@@ -1,1 +1,1 @@
-&\left(\frac{z^{6} \frac{\partial}{\partial z} \operatorname{f}\left(z\right)}{Lr^{2} \operatorname{f}\left(r\right)} + 6 \frac{z^{5} \operatorname{f}\left(z\right)}{Lr^{2} \operatorname{f}\left(r\right)}\right) \frac{\partial}{\partial z} \psi\nonumber\\&+\psi \left(- \frac{m^{2}}{\operatorname{f}\left(r\right)} + \frac{\phi^{2} z^{2}}{Lr^{2} \operatorname{f}\left(r\right) \operatorname{f}\left(z\right)}\right) + \frac{z^{6} \operatorname{f}\left(z\right) \frac{\partial^{2}}{\partial^{2} z}  \psi}{Lr^{2} \operatorname{f}\left(r\right)}
+&\psi \left(- \frac{m^{2}}{\operatorname{f}\left(r\right)} + \frac{\phi^{2}}{\operatorname{f}^{2}\left(r\right)}\right) + \frac{\partial^{2}}{\partial^{2} r}  \psi\nonumber\\&+\left(\frac{\frac{\partial}{\partial r} \operatorname{f}\left(r\right)}{\operatorname{f}\left(r\right)} + \frac{2}{r}\right) \frac{\partial}{\partial r} \psi
