Added some figure plotting routines and wrote on the report

--- a/report/report.bib
+++ b/report/report.bib
@@ -40,3 +40,12 @@
       reportNumber   = "IASSNS-HEP-98-15",
       SLACcitation   = "%%CITATION = HEP-TH/9802150;%%",
 }
+@book{feynman1965quantum,
+  title={Quantum mechanics and path integrals},
+  author={Feynman, R.P. and Hibbs, A.R.},
+  lccn={lc64025171},
+  series={International series in pure and applied physics},
+  url={http://books.google.se/books?id=14ApAQAAMAAJ},
+  year={1965},
+  publisher={McGraw-Hill}
+}
