cleaned up a bit

--- a/report/report.bib
+++ b/report/report.bib
@@ -49,3 +49,29 @@
   year={1965},
   publisher={McGraw-Hill}
 }
+@article{Breitenlohner1982197,
+title = "Positive energy in anti-de Sitter backgrounds and gauged extended supergravity",
+journal = "Physics Letters B",
+volume = "115",
+number = "3",
+pages = "197 - 201",
+year = "1982",
+note = "",
+issn = "0370-2693",
+doi = "10.1016/0370-2693(82)90643-8",
+url = "http://www.sciencedirect.com/science/article/pii/0370269382906438",
+author = "Peter Breitenlohner and Daniel Z. Freedman"
+}
+@article{Kleban:2004bv,
+      author         = "Kleban, M. and Porrati, M. and Rabadan, R.",
+      title          = "{Stability in asymptotically AdS spaces}",
+      journal        = "JHEP",
+      volume         = "0508",
+      pages          = "016",
+      doi            = "10.1088/1126-6708/2005/08/016",
+      year           = "2005",
+      eprint         = "hep-th/0409242",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-th",
+      SLACcitation   = "%%CITATION = HEP-TH/0409242;%%",
+}
