moved metric cache out of git

--- a/report/eqns/phieqm.tex
+++ b/report/eqns/phieqm.tex
@@ -1,1 +1,1 @@
-&- 2 \frac{\phi \psi^{2} r^{2}}{\operatorname{f}\left(r\right)} + r^{2} \frac{\partial^{2}}{\partial^{2} r}  \phi + 2 r \frac{\partial}{\partial r} \phi
+&2 \frac{\phi \psi^{2}}{z^{2} \left(z^{3} -1\right)} + \frac{\partial^{2}}{\partial^{2} z}  \phi
