--- a/report/eqns/psieqm.tex
+++ b/report/eqns/psieqm.tex
@@ -1,1 +1,1 @@
-&\psi \left(- \frac{m^{2}}{\operatorname{f}\left(r\right)} + \frac{\phi^{2}}{\operatorname{f}^{2}\left(r\right)}\right) + \frac{\partial^{2}}{\partial^{2} r}  \psi\nonumber\\&+\left(\frac{\frac{\partial}{\partial r} \operatorname{f}\left(r\right)}{\operatorname{f}\left(r\right)} + \frac{2}{r}\right) \frac{\partial}{\partial r} \psi
+&\psi \left(2 \frac{m}{z^{4}} + 2 \frac{\phi^{2}}{z^{2} \left(z^{3} -1\right)}\right) + \left(2 z - \frac{2}{z^{2}}\right) \frac{\partial^{2}}{\partial^{2} z}  \psi\nonumber\\&+\left(2 + \frac{4}{z^{3}}\right) \frac{\partial}{\partial z} \psi
