Added pdf's back in gitignore and wrote on report

--- a/report/report.bib
+++ b/report/report.bib
@@ -75,3 +75,18 @@ author = "Peter Breitenlohner and Daniel Z. Freedman"
       primaryClass   = "hep-th",
       SLACcitation   = "%%CITATION = HEP-TH/0409242;%%",
 }
+@article{Gubser:2008px,
+      author         = "Gubser, Steven S.",
+      title          = "{Breaking an Abelian gauge symmetry near a black hole
+                        horizon}",
+      journal        = "Phys.Rev.",
+      volume         = "D78",
+      pages          = "065034",
+      doi            = "10.1103/PhysRevD.78.065034",
+      year           = "2008",
+      eprint         = "0801.2977",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-th",
+      reportNumber   = "PUPT-2255",
+      SLACcitation   = "%%CITATION = ARXIV:0801.2977;%%",
+}
