--- a/report/report.tex
+++ b/report/report.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt]{book}
+\documentclass[12pt]{article}
 
 \usepackage[utf8]{inputenc}
 \usepackage{amsmath}
@@ -48,19 +48,21 @@ The correspondence can be formulated by the GKPW equation \cite{Witten:1998qj}
  Z_{\text{cft}}=Z_{\text{strings}}
 \label{GKPW}
 \end{equation}
-where $Z_{\text{cft}}$ is the partition function of the boundary theory and $Z_{\text{strings}}$ is the partition function of the bulk theory at the same temperature. The relation between the Lagrangians of the theories are unknown but the boundary values of fields in the bulk theory corresponds to fields in the CFT.
+where $Z_{\text{cft}}$ is the partition function of the boundary theory and $Z_{\text{strings}}$ is the partition function of the bulk theory. The relation between the Lagrangians of the theories are unknown but the boundary values of fields in the bulk theory correspond to fields in the CFT.
+\subsection{Restrictions}
+Lorentz invariance, relativity, causality, locality?
 \subsection{Partition Function}
 The partition function is a concept from statistical physics. It is for a quantum-mechanical system defined as
 \begin{equation}
  Z(\beta)=\mathrm{tr}(\e^{-\beta\hat{H}})
 \end{equation}
-where $\hat{H}$ is the time independent Hamiltonian and $\beta=(k_BT)^{-1}$ where $K_B$ is Boltzmann's constant and $T$ is the temperature. This is similar to the trace of the time-evolution operator $\hat{U}(t_2,t_1)$ evolving a state from time $t_1$ to $t_2$
+where $\hat{H}$ is the time independent Hamiltonian and $\beta=(k_BT)^{-1}$ where $k_B$ is Boltzmann's constant and $T$ is the temperature. Hereafter we let $k_B=1$ meaning that we measure temperature in units of what energy it corresponds to. This is similar to the trace of the time-evolution operator $\hat{U}(t_2,t_1)$ evolving a state from time $t_1$ to $t_2$
 \begin{equation}
  \mathrm{tr}(\hat{U}(t_2,t_1))=\mathrm{tr}(\e^{-\i\frac{(t_2-t_1)\hat{H}}{\hbar}})=f(t_2-t_1).
 \end{equation}
-The partition function can then be obtained as the analytical extension of $f$,
+We will hereafter let $\hbar=1$ by measuring energy in units of inverse time. The partition function can then be obtained as the analytical extension of $f$,
 \begin{equation}
- Z(\beta)=f(-\i\beta\hbar).
+ Z(\beta)=f(-\i\beta).
 \end{equation}
 The trace of the time evolution operator can be calculated as an integral over configuration space which in our case will be fields configurations $\psi$,
 \begin{equation}
@@ -68,12 +70,13 @@ The trace of the time evolution operator can be calculated as an integral over c
 \end{equation}
 The time-evolution operator can be calculated using Feynman's path integrals \cite{feynman1965quantum},
 \begin{equation}
- \bracket{\psi_2}{\hat{U}(t,0)}{\psi_1}=\int_{\psi_1}^{\psi_2} \mathcal{D}[\psi(t)]\e^{\frac{\i}{\hbar}S[\psi(t)]}
+ \bracket{\psi_2}{\hat{U}(t,0)}{\psi_1}=\int_{\psi_1}^{\psi_2} \mathcal{D}[\psi(t)]\e^{\i S[\psi(t)]}
 \end{equation}
 where $S[\psi(t)]$ is the action of the path through field configurations $\psi(t)$. Combining these results tells us that the trace $f(t)$ can be calculated as a periodic time path integral with period $t$
 \begin{equation}
- f(t)=\int_0^t \mathcal{D}[\psi(t)]\e^{\frac{\i}{\hbar}S[\psi(t)]}.
+ f(t)=\int_0^t \mathcal{D}[\psi(t)]\e^{\i S[\psi(t)]}.
 \end{equation}
+This means that $Z(\beta)$ can be obtained by calculating a path integral where the time is imaginary and periodic. The CFT we are interested in lives on the boundary of an AdS theory. The metric of the CFT is the metric induced from the bulk theory. The boundary is time-like and the time periodicity of the two theories are thus the same. This means that they are at the same temperatures.\\
 Only paths of extremal action will contribute to this in the classical limit because of the oscillatory behaviour of the exponential. Let $\psi_\mathrm{c}(t)$ be the path that extremizes the action and expand the exponent as a Taylor series around this
 \begin{equation}
 \begin{split}
@@ -84,23 +87,23 @@ Only paths of extremal action will contribute to this in the classical limit bec
 The functional derivative of the action is just the ordinary derivative of the Lagrangian function. TODO
 The partition function is in the classical limit
 \begin{equation}
- Z(\beta)=f(-\i\beta\hbar)\underbrace{=}_{classical} \e^{\frac{i}{\hbar}S_c}
+ Z(\beta)=f(-\i\beta)\stackrel{\mathrm{classical}}{=} \e^{i S_c}\label{classical}
 \end{equation}
-where $S_c$ is the action of classical periodic path with period $-\i\beta\hbar$.
+where $S_c$ is the action of classical periodic path with period $-\i\beta$.
 \subsection{Expectation Values}
 The boundary values of the bulk fields correspond to fields in the CFT. Expectation values of observables in the CFT can be calculated using a generating functional $Z[J]$. This is a partition function for a system with a perturbed Lagrangian $\L_J(x)=\L(x)+J(x)O(x)$. Here $O(x)$ is a local operator on the fields. The generating functional can be regarded an expectation value of a system with the original Lagrangian $\L$.
 \begin{equation}
 \begin{split}
- Z[J]&=\int_0^{-\i\beta\hbar} \mathcal{D}[\psi(t)]\e^{\frac{\i}{\hbar}\int \L(\psi(x))+J(x)O(\psi(x))}\\
-&=Z[0]\int_0^{-\i\beta\hbar} \mathcal{D}[\psi(t)]\frac{\e^{\frac{\i}{\hbar}\int \L(\psi(x))}}{Z[0]}\e^{\frac{\i}{\hbar}\int J(x)O(\psi(x))}\\
-&=Z[0]\langle\e^{\frac{\i}{\hbar}\int J(x)O(\psi(x))}\rangle
+ Z[J]&=\int_0^{-\i\beta} \mathcal{D}[\psi(t)]\e^{\i \int \L(\psi(x))+J(x)O(\psi(x))}\\
+&=Z[0]\int_0^{-\i\beta} \mathcal{D}[\psi(t)]\frac{\e^{\i\int \L(\psi(x))}}{Z[0]}\e^{\i\int J(x)O(\psi(x))}\\
+&=Z[0]\langle\e^{\i\int J(x)O(\psi(x))}\rangle
 \end{split}
 \end{equation}
 Taking a functional derivative of this gives:
 \begin{equation}
 \begin{split}
- \frac{\delta}{\delta J}\log(Z[J])|_{J=0}&=\frac{Z[0]\langle\frac{\i}{\hbar}O(\psi(x))\e^{\frac{\i}{\hbar}\int J(x)O(\psi(x))}\rangle}{  Z[0]\langle\e^{\frac{\i}{\hbar}\int J(x)O(\psi(x))}\rangle }\big |_{J=0}\\
-&=\frac{\i}{\hbar}\langle O(\psi(x))\rangle\label{expectation}
+ \frac{\delta}{\delta J}\log(Z[J])|_{J=0}&=\frac{Z[0]\langle\i O(\psi(x))\e^{\i\int J(x)O(\psi(x))}\rangle}{  Z[0]\langle\e^{\i \int J(x)O(\psi(x))}\rangle }\big |_{J=0}\\
+&=\i \langle O(\psi(x))\rangle\label{expectation}
 \end{split}
 \end{equation}
 The partition functions of the bulk and boundary theories are the same even for a perturbed Lagrangian. Both Lagrangians are then perturbed. Expectation values of operators of the boundary theory can thus be calculated using the partition function for the bulk theory. It is though not trivial to figure out what fields in the bulk theory corresponds to what operators in the boundary theory
@@ -109,15 +112,19 @@ We wish to compute expectation values of the CFT. The field theory is a strongly
 
 The partition function of the bulk theory must then be calculated. This is in our case easier, TODO reference, since this theory can be treated in a classical limit. But the equations of motion must still be calculated and the solutions must be translated to expectation values for the CFT. This section is devoted to the theory of how this is done.
 \subsection{Metric}
-The precise form of the bulk Lagrangian that corresponds to the boundary theory we are interested in is unknown. The string theory is gravitational and the Lagrangian thus has an unknown parameter that is the Newton's constant $G$. This is assumed to be small so that we are in a so called ``probe limit''. We will later see when this assumption can't be trusted, TODO. The prope limit lets us solve the equations of motion for the metric independently of the other fields. We are looking for an equilibrium solution at a finite temperature $T$ and the solution is then known to be a black hole, the Schwarzschild metric in AdS space. The metric looks like this in a particular choice of coordinates where the radial coordinate $z$ is 0 at the boundary and $z_h$ at the horizon
+The precise form of the bulk Lagrangian that corresponds to the boundary theory we are interested in is unknown. The string theory is gravitational and the Lagrangian thus has an unknown parameter that is the Newton's constant $G$. This is assumed to be small so that we are in a so called ``probe limit''. We will later see when this assumption can't be trusted, TODO. The prope limit lets us solve the equations of motion for the metric independently of the other fields. We are looking for an equilibrium solution at a finite temperature $T$ and the solution is then known to be a black hole, the Schwarzschild metric in AdS space. The metric has the following form in a particular choice of coordinates where the radial coordinate $z$ is 0 at the boundary and $z_h$ at the horizon
 \begin{equation}
- \d s^2=g_{ab}\d x^a\d x^b=\frac{L^2}{z^2}\left(\frac{\d z^2}{f(z)}-f(z)\d t^2+\d \mathbf{x}^2\right).\label{metric}
+ g_{ab}\d x^a\d x^b=\frac{L^2}{z^2}\left(\frac{\d z^2}{f(z)}-f(z)\d t^2+\d \mathbf{x}^2\right).\label{metric}
 \end{equation}
-Here $f(z)=1-z^dz_h^{-d}$ and $d$ is the dimension of the boundary. $f(z)$ approaches 1 at the boundary and the space is asymptotically AdS.
-\subsection{Boundary Behaviour}
-The bulk Lagrangian considered will contain different fields and depend both on the fields and their first derivatives. Consider a field $\psi$ with a mass term $-(\partial_a\psi)^2$ and a potential term $V(\psi)$. The classical solution is the one that extremizes the action. The action integral contains the metric as an integration measure
+Here $f(z)=1-z^dz_h^{-d}$ and $d$ is the dimension of the boundary. The vector $\mathbf{x}$ thus has $d-1$ components. $f(z)$ approaches 1 at the boundary and the space is asymptotically AdS. All coordinates are evidently of the same unit. The gravitational part of the Lagrangian can now be removed and this background metric can be used instead of solving the equations of motion for the metric together with the fields. TODO, imaginary time, deficit angle gives $T$.
 \begin{equation}
- S=\int\d x\sqrt{|\det g_{ab}|}\L.
+ T=\frac{d}{4\pi  z_h}
+\end{equation}
+%This $T$ in units of energy is also in units of inverse length since we chose the energy unit to the inverse time it 
+\subsection{Boundary Behaviour}
+The bulk Lagrangian considered will contain different fields and depends both on the fields and their first derivatives. Consider a field $\psi$ with a kinetic term $-(\partial_a\psi)^2$ and a potential term $V(\psi)$. The classical solution is the one that extremizes the action. The action integral contains the metric as an integration measure
+\begin{equation}
+ S=\int\d^{d+1} x\sqrt{|\det g_{ab}|}\L\equiv\int\d^{d+1} x\sqrt{g}\L.
 \end{equation}
 The Euler-Lagrange equation is obtained by varying the action. The integration measure can then be regarded as part of the Lagrangian or covariant derivatives can be used in the derivation of the Euler-Lagrange equation. The measure becomes when using the metric \eqref{metric} $L^{d+1}z^{-d-1}$. The Euler-Lagrange equation gives
 \begin{equation}
@@ -160,43 +167,76 @@ with solutions
 \Delta=\frac{d\pm\sqrt{d^2+4L^2m^2}}{2}.
 \end{split}
 \end{equation}
-$\psi$ thus goes as $z^{\Delta_1}$ where $\Delta_1$ is the smaller solution and $\Delta_2$ the larger.
-TODO, continue
-\section{Application to Two Dimensional Electron Condensates}
-TODO, motivate. The Lagrangian used is
+$\psi$ thus goes as $z^{\Delta_0}$ where $\Delta_0$ is the smaller solution and $\Delta_1$ the larger. The leading behaviour of $\psi$ near $z=0$ is
+\begin{equation}
+ \psi=\psi_0\left(\frac{z}{L}\right)^{\Delta_0}+\psi_1\left(\frac{z}{L}\right)^{\Delta_1}
+\end{equation}
+unless $\Delta_1-\Delta_0>=1$ and further terms from the series corresponding to $\Delta_0$ must be included.\\
+
+What will the contribution to the action from this solution be? Consider the action contribution from the region $z\in[\epsilon,\delta]$ where $\epsilon<\delta$ and $\epsilon\rightarrow0$.
+\begin{equation}
+\begin{split}
+ S_{[\epsilon,\delta]}=&\int_{z\in[\epsilon,\delta]}\d^{d+1} x\sqrt{g}\L=\\
+=&V\int_\epsilon^\delta\d z \left(\frac{z}{L}\right)^{-d-1}\left(m^2\psi^2-(\partial_a\psi)^2\right)=\\
+=&V\int_\epsilon^\delta\d z \left(\frac{z}{L}\right)^{-d-1}\left(m^2( \psi_0\left(\frac{z}{L}\right)^{\Delta_0}+\psi_1\left(\frac{z}{L}\right)^{\Delta_1} )^2-(\partial_a(\psi_0\left(\frac{z}{L}\right)^{\Delta_0}+\psi_1\left(\frac{z}{L}\right)^{\Delta_1}))^2\right)=\\
+=&V\int_\epsilon^\delta\d z \left(\frac{z}{L}\right)^{-d-1}\Big[m^2 \left(\psi_0^2\left(\frac{z}{L}\right)^{2\Delta_0}+\psi_1^2\left(\frac{z}{L}\right)^{2\Delta_1}+2\psi_0\psi_1\left(\frac{z}{L}\right)^{\Delta_0+\Delta_1}\right) \\
+&-g^{zz}L^{-2}(\Delta_0\psi_0\left(\frac{z}{L}\right)^{\Delta_0-1}+\Delta_1\psi_1\left(\frac{z}{L}\right)^{\Delta_1-1})^2\Big]=\\
+=&V\int_\epsilon^\delta\d z\left(\frac{z}{L}\right)^{-d-1}\Big[m^2 \left(\psi_0^2\left(\frac{z}{L}\right)^{2\Delta_0}+\psi_1^2\left(\frac{z}{L}\right)^{2\Delta_1}+2\psi_0\psi_1\left(\frac{z}{L}\right)^{\Delta_0+\Delta_1}\right)\\
+&-g^{zz}L^{-2}\left(\Delta_0^2\psi_0^2\left(\frac{z}{L}\right)^{2(\Delta_0-1)}+\Delta_1^2\psi_1^2\left(\frac{z}{L}\right)^{2(\Delta_1-1)}+
+2\Delta_0\Delta_1\psi_0\psi_1\left(\frac{z}{L}\right)^{\Delta_0+\Delta_1-2}\right)\Big]=\\
+=&V\int_\epsilon^\delta\d z\Big[m^2 \left(\psi_0^2\left(\frac{z}{L}\right)^{2\Delta_0-d-1}+\psi_1^2\left(\frac{z}{L}\right)^{2\Delta_1-d-1}+2\psi_0\psi_1\left(\frac{z}{L}\right)^{-1}\right)\\
+&-L^{-2}\left(\Delta_0^2\psi_0^2\left(\frac{z}{L}\right)^{2\Delta_0-d-1}+\Delta_1^2\psi_1^2\left(\frac{z}{L}\right)^{2\Delta_1-d-1}+
+2L^2m^2\psi_0\psi_1\left(\frac{z}{L}\right)^{-1}\right)\Big]=\\
+=&V\int_\epsilon^\delta\d z \left((m^2-\Delta_0^2L^{-2})\psi_0^2\left(\frac{z}{L}\right)^{2\Delta_0-d-1}+(m^2-\Delta_1^2L^{-2})\psi_1^2\left(\frac{z}{L}\right)^{2\Delta_1-d-1}\right)=\\
+=&V\int_\epsilon^\delta\d z \left(-d\Delta_0L^{-2}\psi_0^2\left(\frac{z}{L}\right)^{2\Delta_0-d-1}-d\Delta_1L^{-2}\psi_1^2\left(\frac{z}{L}\right)^{2\Delta_1-d-1}\right)=\\
+=&V\left(-\frac{d\Delta_0L^{-2}\psi_0^2}{2\Delta_0-d}\left(\frac{\epsilon}{L}\right)^{2\Delta_0-d}-\frac{d\Delta_1L^{-2}\psi_1^2}{2\Delta_1-d}\left(\frac{\epsilon}{L}\right)^{d-2\Delta_0}\right)+\mathrm{finite}
+\end{split}
+\end{equation}
+Here $\Delta_0+\Delta_1=d$ and $\Delta_0\Delta_1=L^2m^2$ has been used. One of these two terms diverges as $\epsilon\rightarrow0$. Which one depends on the sign of $2\Delta_0-d$.
+The action from the near boundary thus diverges. This can be remedied by having a boundary term in the action that exactly cancels this divergence. 
+\subsection{Horizon Beaviour}
+TODO: Wilson loop=>$\phi=0$. Ingoing boundary conditions.
+\subsection{Expectation Values of Boundary Operators}
+These expectation values are calculated using \eqref{expectation} and \eqref{classical}.
+\begin{equation}
+\begin{split}
+\langle O(\psi(x))\rangle\label{expectation}=-i\frac{\delta}{\delta J(x)}\log(Z[J])|_{J=0}\stackrel{\mathrm{GKPW}}{=}-i\frac{\delta}{\delta J(x)}\log(Z[J])|_{J=0}\stackrel{\mathrm{classical}}{=}\frac{\delta}{\delta J(x)}S_c|_{J=0}
+\end{split}
+\end{equation}
+The functional derivative is thus the change in the classical action when the boundary value of the fields are changed. The total change in the partition function is needed and the whole field solutions change when changing the boundary conditions so this must be taken into account. The derivative becomes
+\begin{equation}
+\begin{split}
+\frac{\delta}{\delta J(x)}S_c|_{J=0}=\int \d^{d+1}y\sqrt{g}\left(\frac{\partial\L(y)}{\partial \phi_i(y)}\frac{\partial \phi_i(y)}{\partial J(x)}+\frac{\partial\L(y)}{\partial (\partial_a\phi_i(y))}\frac{\partial (\partial_a\phi_i(y))}{\partial J(x)}\right)
+\end{split}
+\end{equation}
+where $i$ goes over all fields. Here the Lagrangian is assumed to only depend on the fields and their first derivatives. Now let $\L^\prime=\sqrt{g}\L$ and integrate by parts
+\begin{equation}
+\begin{split}
+\frac{\delta}{\delta J(x)}S_c|=&\int \d^{d+1}y\left(\frac{\partial\L^\prime(y)}{\partial \phi_i(y)}-\partial_a\frac{\partial\L^\prime(y)}{\partial (\partial_a\phi_i(y))}\right)\frac{\partial (\phi_i(y))}{\partial J(x)}\\
++&\int_{\partial\mathrm{AdS}} \d^{d}yn_a\frac{\partial\L^\prime(y)}{\partial (\partial_a\phi_i(y))}\frac{\partial (\phi_i(y))}{\partial J(x)}
+\end{split}
+\end{equation}
+where $n_a$ is an outward normal to the boundary of AdS.
+The first integral vanishes since the fields obey the Euler-Lagrange equation.
+\section{Application to Two-Dimensional Electron Condensates}
+TODO, Strong coupling, classical limit.
+TODO, motivate, reference. The Lagrangian used is
 \begin{eqnarray}
- \mathcal{L}=&-\frac{1}{4}F_{ab}F^{ab}-m^2\psi\overline{\psi}-D_a\psi\overline{D^a\psi}
-+\gamma C_{abcd}F^{ab}F^{cd}+\alpha_1(F_{ab}F^{ab})^2\nonumber\\
-&+\alpha_2F^a_bF^b_cF^c_dF^d_a
+ \mathcal{L}=&\frac{1}{2\kappa}\left(R-2\Lambda\right)-\frac{1}{4}F_{ab}F^{ab}-m^2\psi\overline{\psi}-D_a\psi\overline{D^a\psi}
++\gamma C_{abcd}F^{ab}F^{cd}\nonumber\\
+&+\alpha_1(F_{ab}F^{ab})^2+\alpha_2F^a_bF^b_cF^c_dF^d_a
 \end{eqnarray}
-where $D_a$ is the gauge covariant derivative $D_a=\nabla_a-iA_a$ and $F_{ab}=\partial_aA_b-\partial_bA_a$. This Lagrangian is invariant under a U(1) gauge transformation
+TODO, describe term by term.
+where $D_a$ is the gauge covariant derivative $D_a=\nabla_a-iqA_a$ and $F_{ab}=\partial_aA_b-\partial_bA_a$. This Lagrangian is invariant under a U(1) gauge transformation
 \begin{eqnarray}
  \psi&\rightarrow&\mathrm{e}^{i\theta(x)}\psi\\
- A_a&\rightarrow& A_a+\nabla_a\theta(x).
+ A_a&\rightarrow& A_a+\frac{1}{q}\nabla_a\theta(x).
 \end{eqnarray}
 This lets us make a choice of gauge, $\nabla_aA^a=0$, the Lorentz gauge. The gauge is still not completely fixed, a gauge transformation $\theta(x)$ such that $\nabla_a\nabla^a\theta(x)=0$ can still be done without violating the gauge condition.
-The Lagrangian is also evidently Lorentz invariant imposing Lorentz invariance of the boundary theory.
-\subsection{Parameters}
-There are multiple unknown parameters. These must be investigated to find values that give us the boundary theory we are interested in. The Lagrangian contains the paramters $G, L, m^2, \alpha_1, \alpha_2, \gamma$. The solution of the equations of motion for the metric we used in the probe limit also contains a temperature dependent constant $z_h$. Some of these parameters might be redundant since we can make different rescalings of fields, coordinate transformations.\\
-
-The Breitenlohner-Freedman bound (BF) is a lower bound on $m^2$ of a massive scalar field in AdS space. It requires
-\begin{equation}
- L^2m^2\geq-4d^2\label{BF}
-\end{equation}
-for a stability\cite{Kleban:2004bv}, TODO explain. 
-\section{Application}
-Classicallity
-scalar example
-show 4.68 from GKPW and classicallity assumption. Possible for general lagrangian?
-\section{Application to Superconductor}
-
-\section{Numerical solution of bulk equations}
-The bulk field equations are obtained by varying the bulk Lagrangian with respect to all the fields. This can be done with the Euler-Lagrange equation since the action does not contain any higher derivatives. The Euler-Lagrange equation for a scalar field $\phi$ states
-\begin{equation}
- \partial_a\left(\frac{\partial\mathcal{L}}{\partial(\partial_a\phi)}\right)-\frac{\partial\mathcal{L}}{\partial\phi}.
-\end{equation}
-
-
+The Lagrangian is also evidently Lorentz invariant imposing Lorentz invariance of the boundary theory. This Lagrangian also posseses conformal invariance. This means that the Lagrangian is unchanged by the transformation $g_{ab}\rightarrow f(x)g_{ab}$.
+\subsection{Symmetry Assumptions}
+\subsection{Equations of motion}
+Describe why $\psi$ can be considered real.\\
 First consider a system with $A_r=A_x=A_y=0$. The field equations obtained by varying the fields $\psi$, $\phi$ are respectively
 \begin{eqnarray}
 0=\input{eqns/psieqm.tex}
@@ -204,6 +244,52 @@ First consider a system with $A_r=A_x=A_y=0$. The field equations obtained by va
 \begin{eqnarray}
 0=\input{eqns/phieqm.tex}.
 \end{eqnarray}
+\subsection{Parameters}
+There are multiple unknown parameters. These must be investigated to find values that give us the boundary theory we are interested in. The Lagrangian contains the paramters $\kappa$,$ L$, $m^2$, $q$, $\alpha_1$, $\alpha_2$, and $\gamma$. The solution of the equations of motion for the metric we used in the probe limit also contains a temperature dependent constant $z_h$. Some of these parameters might be redundant since we can make different transformations of fields and coordinates. The physics of the bulk are treated in the classical limit and the Lagrangian can thus be changed as long as the equations of motion for $\psi$ and $A_a$ are left unchanged. The physics are independent of the exact value of $\kappa$ as long as we are in the probe limit.\\
+
+The horizon $z_h$ and the curvature length $L$ set length scales in the metric. Units of the coordinates can be chosen such that $z_h=1$. This means that we for different temperatures have different units since $z_h$ is related to the temperature. We will have to convert between these units when comparing results from different temperatures.\\
+
+The factor $L^2$ in the metric does not affect the theory since the Lagrangian has conformal invariance. Let $L=1$ hereafter.\\
+
+Considering $q\psi$ and $qA_a$ as the fields gives a Lagrangian of the same form but with different constants $\alpha_1$, $\alpha_2$, and $\gamma$ and the whole Lagrangian is divided by $q^2$ except for the term originally containing $q^2$ which is divided by $q^4$. Multiplying the Lagrangian by a constant doesn't affect the equations of motion so $q=1$ can be assumed without getting a less general Lagrangian. It should be noted that a different value of $q$ would give $q\psi$ as solution instead where $\psi$ is the solution of the equations of motion when $q=1$. The same is true for $A_a$.\\
+
+%The parameters $\alpha_1, \alpha_2, \gamma$ are dimension-less and can not be scaled away. 
+The Breitenlohner-Freedman bound (BF) is a lower bound on $m^2$ of a massive scalar field in AdS space. It requires
+\begin{equation}
+ L^2m^2\geq-4d^2\label{BF}
+\end{equation}
+for stability\cite{Kleban:2004bv}, TODO explain. The scalar field $\psi$ should obey this bound far away from the black-hole for normalizeable modes, TODO explain. We would though like a symmetry breaking of $\psi$ near the black hole corresponding to the electron condensate \cite{Gubser:2008px}. This can happen because the coupling of $\psi$ to $A_a$ gives $\psi$ an effective mass. \\The effective mass is given by:
+\begin{equation}
+ m_{eff}^2=m^2+A_aA^a
+%=m^2+g^{tt}\phi^2
+=m^2-\frac{z^2}{L^2(1-z^dz_h^{-d})}\phi^2
+\end{equation}
+
+The bulk field equations are obtained by varying the bulk Lagrangian with respect to all the fields. This can be done with the Euler-Lagrange equation since the action does not contain any higher derivatives. The Euler-Lagrange equation for a scalar field $\phi$ states
+\begin{equation}
+ \partial_a\left(\frac{\partial\mathcal{L}}{\partial(\partial_a\phi)}\right)-\frac{\partial\mathcal{L}}{\partial\phi}.
+\end{equation}
+$\phi$ is 0 at the horizon but increases as $\psi$ is non-zero. This effective mass breaks the BF bound since $g^{tt}$ diverges at the horizon. TODO, talk to Ulf and do calculations.
+{\bf Skip the following?}:\\
+Our space, \eqref{metric}, is asymptotically AdS with $d=3$ at the boundary. But what happens near the horizon? Let $s=z_h-z$. Expand $f(z_h-s)$ around $s=0$.
+\begin{equation}
+ f(z_h-s)%=1-(z_h-s)^{d}z_h^{-d}
+=d\frac{s}{z_h}+O(s^2z_h^{-2})
+\end{equation}
+The metric now becomes
+\begin{equation}
+\begin{split}
+ g_{ab}\d x^a\d x^b&=\frac{L^2}{(z_h-s)^2}\left(\frac{\d s^2}{d\frac{s}{z_h}}-d\frac{s}{z_h}\d t^2+\d \mathbf{x}^2\right)\\
+&=\frac{L^2}{z_h^2}\left(\frac{z_h\d s^2}{ds}-\frac{ds\d t^2}{z_h}+\d \mathbf{x}^2\right)
+\end{split}
+\end{equation}
+\subsection{Free Energy}
+
+\subsection{Expectation Values}
+The field 
+\section{Numerical solution of bulk equations}
+
+
 \fig{O2_T}{A picture}
 \section{test}
 
